--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Hangman</title>  
       <link rel="icon" type="image/ico" href="" />
-      <link rel="stylesheet" type ="text/css" href="hangman.scss" />
+      <link rel="stylesheet" type ="text/css" href="hangman.css" />
       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
       <script type="text/javascript" src="hangman.js"></script>
@@ -14,6 +14,10 @@
       <h1>Hangman</h1>
       <h3>The fate of man is in your hands!</h3>
     </header>
+    <div id="game-stats">
+      <span class="left">Score: 0</span>
+      <span class="right">Time: 1:00</span>
+    </div>
     <div id="container">
       <img src="http://placekitten.com/g/200/300" />
       <div id="wordbox">
