Feedback mechanics, bug fixes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <span>_</span>
         <span>_</span>
         <span>_</span>
+        <span>_</span>
+        <span>_</span>
+        <span>_</span>
       </div>
       <div id="letterbox">
         <span>A</span>
