Fixed coloring and header text event responses

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>    
     <header>
       <h1>Hangman</h1>
-      <h3>The fate of man is in your hands!</h3>
+      <h2>The fate of man is in your hands!</h3>
+      <h3>Guess the word as quick as you can</h3>
     </header>
     <div id="game-stats">
       <span class="left">Score: 0</span>
