Added hangman pics, minor fixes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <span class="right">Time: 1:00</span>
     </div>
     <div id="container">
-      <img src="http://placekitten.com/g/200/300" />
+      <img src="Hangman-0.png" />
       <div id="wordbox">
         <span>_</span>
         <span>_</span>
