Fixed scoring, auto-adjust wordbox

--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
     <div id="container">
       <img src="Hangman-0.png" />
       <div id="wordbox">
-        <span>_</span>
-        <span>_</span>
-        <span>_</span>
-        <span>_</span>
-        <span>_</span>
-        <span>_</span>
-        <span>_</span>
-        <span>_</span>
+        <span id="base-span">_</span>
       </div>
       <div id="letterbox">
         <span>A</span>
